--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,7 +9,7 @@ body {
 }
 
 .navbar {
-  background: #5488c0;
+  background: #1C4AA2;
   min-width: 100vw;
   min-height: 50px;
   margin-bottom: 10px;
